[gd_scene load_steps=44 format=3 uid="uid://bovp7giadg5km"]

[ext_resource type="Script" path="res://Scripts/Hameleon.gd" id="1_0vprd"]
[ext_resource type="Texture2D" uid="uid://b6t5s3ma0il2b" path="res://Assets/Enemy/Chameleon/Attack (84x38).png" id="2_6xm01"]
[ext_resource type="Texture2D" uid="uid://bvgq4alq5e71j" path="res://Assets/Enemy/Chameleon/Hit (84x38).png" id="3_24aif"]
[ext_resource type="Texture2D" uid="uid://dqdxahansyv3m" path="res://Assets/Enemy/Chameleon/Run (84x38).png" id="4_7bqjb"]
[ext_resource type="FontFile" uid="uid://1lwd7qjkjc2f" path="res://Assets/Other/Kurland.otf" id="5_ftawx"]
[ext_resource type="AudioStream" uid="uid://b4rjmmi7e38c2" path="res://Assets/Other/Music/Hameleon_death_sound.mp3" id="6_7dolg"]
[ext_resource type="AudioStream" uid="uid://ctq5qnwl8oflr" path="res://Assets/Other/Music/Hameleon_death_sound_2.mp3" id="7_2mmao"]
[ext_resource type="AudioStream" uid="uid://bghexovpmngil" path="res://Assets/Other/Music/Hameleon_attack_sound.mp3" id="8_l45do"]
[ext_resource type="AudioStream" uid="uid://qe0tr4qi42lr" path="res://Assets/Other/Music/SlimeHitted.mp3" id="9_dh0ei"]
[ext_resource type="Texture2D" uid="uid://bdv2jct3iq2dd" path="res://Assets/Other/Guns/Shotgun/ShotGunBullet.png" id="10_2mrh7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1v5wq"]
atlas = ExtResource("2_6xm01")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufciy"]
atlas = ExtResource("2_6xm01")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_301uw"]
atlas = ExtResource("2_6xm01")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb602"]
atlas = ExtResource("2_6xm01")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4byvh"]
atlas = ExtResource("2_6xm01")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldefv"]
atlas = ExtResource("2_6xm01")
region = Rect2(420, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l56k"]
atlas = ExtResource("2_6xm01")
region = Rect2(504, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeuqs"]
atlas = ExtResource("2_6xm01")
region = Rect2(588, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtgt"]
atlas = ExtResource("2_6xm01")
region = Rect2(672, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_oflql"]
atlas = ExtResource("2_6xm01")
region = Rect2(756, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqkrs"]
atlas = ExtResource("3_24aif")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tisou"]
atlas = ExtResource("3_24aif")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj64e"]
atlas = ExtResource("3_24aif")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mloev"]
atlas = ExtResource("3_24aif")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eel3"]
atlas = ExtResource("3_24aif")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1lor"]
atlas = ExtResource("4_7bqjb")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxava"]
atlas = ExtResource("4_7bqjb")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_clt7w"]
atlas = ExtResource("4_7bqjb")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul4br"]
atlas = ExtResource("4_7bqjb")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddfl2"]
atlas = ExtResource("4_7bqjb")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttwds"]
atlas = ExtResource("4_7bqjb")
region = Rect2(420, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8piy5"]
atlas = ExtResource("4_7bqjb")
region = Rect2(504, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8kc4"]
atlas = ExtResource("4_7bqjb")
region = Rect2(588, 0, 84, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_s2h66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v5wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufciy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_301uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb602")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_4byvh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ldefv")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6l56k")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_xeuqs")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_8qtgt")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_oflql")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_wqkrs")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tisou")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_tj64e")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_mloev")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_2eel3")
}],
"loop": true,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxava")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clt7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul4br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddfl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttwds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8piy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8kc4")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6pd2r"]
radius = 6.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r8wia"]
radius = 6.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8x6d4"]
size = Vector2(53.5, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awj81"]
size = Vector2(140, 34)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsagk"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvaoq"]
bg_color = Color(0.698039, 0, 0.0156863, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_otif0"]
atlas = ExtResource("10_2mrh7")
region = Rect2(112, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc7ln"]
atlas = ExtResource("10_2mrh7")
region = Rect2(128, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4hv8y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otif0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc7ln")
}],
"loop": true,
"name": &"fire",
"speed": 3.0
}]

[node name="Hameleon" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 12
script = ExtResource("1_0vprd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.869792, 1)
sprite_frames = SubResource("SpriteFrames_s2h66")
animation = &"attack"
frame_progress = 0.727284
offset = Vector2(-20, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -12)
shape = SubResource("CapsuleShape2D_6pd2r")

[node name="Enemy_hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
position = Vector2(-1, -16)
shape = SubResource("CapsuleShape2D_r8wia")

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_area"]
position = Vector2(-41, -15)
shape = SubResource("RectangleShape2D_8x6d4")

[node name="Hero_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero_area"]
position = Vector2(-3.09944e-06, -15)
shape = SubResource("RectangleShape2D_awj81")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -32.0
offset_right = 172.0
offset_bottom = -5.0
scale = Vector2(0.1, 0.1)
theme_override_styles/background = SubResource("StyleBoxFlat_wsagk")
theme_override_styles/fill = SubResource("StyleBoxFlat_vvaoq")
value = 30.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Damage_label" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = -26.0
offset_right = -8.0
offset_bottom = -14.0
theme_override_colors/font_color = Color(0.14902, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ftawx")
theme_override_font_sizes/font_size = 10
text = "12"

[node name="Damage_label_rifle" type="Label" parent="."]
visible = false
offset_left = 13.0
offset_top = -27.0
offset_right = 26.0
offset_bottom = -15.0
theme_override_colors/font_color = Color(0.14902, 0, 1, 1)
theme_override_fonts/font = ExtResource("5_ftawx")
theme_override_font_sizes/font_size = 10
text = "12"

[node name="Damage_label_uzi" type="Label" parent="."]
visible = false
offset_left = 11.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(0.592157, 0, 0.639216, 1)
theme_override_fonts/font = ExtResource("5_ftawx")
theme_override_font_sizes/font_size = 10
text = "12"

[node name="Damage_label_kar" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -10.0
offset_right = -7.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.780392, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ftawx")
theme_override_font_sizes/font_size = 10
text = "12"

[node name="Sounds" type="Node2D" parent="."]

[node name="Death_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_7dolg")

[node name="Death_sound2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_2mmao")
volume_db = -10.0

[node name="AttackSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_l45do")
volume_db = 5.0

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_dh0ei")

[node name="Timers" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="attack_cd" type="Timer" parent="Timers"]
wait_time = 0.75

[node name="Damage_timer" type="Timer" parent="Timers"]

[node name="death_timer" type="Timer" parent="Timers"]

[node name="Damage_label_shotgun" type="Label" parent="."]
visible = false
offset_left = -17.0
offset_top = -39.0
offset_right = 4.0
offset_bottom = -27.0
theme_override_colors/font_color = Color(0, 0.364706, 0.0705882, 1)
theme_override_fonts/font = ExtResource("5_ftawx")
theme_override_font_sizes/font_size = 10
text = "21"

[node name="ShotgunBullet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -12)
scale = Vector2(1.01563, 1.01563)
sprite_frames = SubResource("SpriteFrames_4hv8y")
animation = &"fire"

[connection signal="area_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="hit_area" to="." method="_on_hit_area_body_exited"]
[connection signal="body_entered" from="Hero_area" to="." method="_on_hero_area_body_entered"]
[connection signal="body_exited" from="Hero_area" to="." method="_on_hero_area_body_exited"]
[connection signal="timeout" from="Timers/attack_cd" to="." method="_on_attack_cd_timeout"]
[connection signal="timeout" from="Timers/Damage_timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timers/death_timer" to="." method="_on_death_timer_timeout"]
